--- a/src/VirtoCommerce.MarketingExperienceApi.Data/VirtoCommerce.MarketingExperienceApi.Data.csproj
+++ b/src/VirtoCommerce.MarketingExperienceApi.Data/VirtoCommerce.MarketingExperienceApi.Data.csproj
@@ -15,7 +15,9 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
-    <PackageReference Include="VirtoCommerce.ExperienceApiModule.Core" Version="3.233.0" />
+    <PackageReference Include="VirtoCommerce.CustomerModule.Core" Version="3.218.0" />
+    <PackageReference Include="VirtoCommerce.ExperienceApiModule.Core" Version="3.248.0" />
+    <PackageReference Include="VirtoCommerce.MarketingModule.Core" Version="3.204.0" />
     <PackageReference Include="VirtoCommerce.Platform.Data" Version="3.265.0" />
   </ItemGroup>
 
