--- a/src/VirtoCommerce.MarketingExperienceApi.Data/VirtoCommerce.MarketingExperienceApi.Data.csproj
+++ b/src/VirtoCommerce.MarketingExperienceApi.Data/VirtoCommerce.MarketingExperienceApi.Data.csproj
@@ -16,7 +16,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
     <PackageReference Include="VirtoCommerce.CustomerModule.Core" Version="3.218.0" />
-    <PackageReference Include="VirtoCommerce.ExperienceApiModule.Core" Version="3.261.0-alpha.1113-opus-update-contibution" />
+    <PackageReference Include="VirtoCommerce.ExperienceApiModule.Core" Version="3.300.0" />
     <PackageReference Include="VirtoCommerce.MarketingModule.Core" Version="3.204.0" />
     <PackageReference Include="VirtoCommerce.Platform.Data" Version="3.271.0" />
   </ItemGroup>
