--- a/.editorconfig
+++ b/.editorconfig
@@ -3,27 +3,22 @@ root = true
 [*]
 charset = utf-8
 indent_style = space
-indent_size = 4
+indent_size = 2
 end_of_line = crlf
 trim_trailing_whitespace = true
 insert_final_newline = true
 
 # Project files
-[*.csproj,*.props]
-indent_size = 2
+[*.{csproj,props}]
 insert_final_newline = false
-
-# JSON files
-[*.json]
-indent_size = 2
-
-# Configuration files
-[*.config]
-indent_size = 2
 
 # HTML files
-[*.html,*.htm]
+[*.{html,htm}]
 insert_final_newline = false
+
+# Code
+[*.{cs,js,ts,ps1,sh,bat,cmd}]
+indent_size = 4
 
 # Dotnet code style settings
 [*.{cs,vb}]
@@ -170,3 +165,5 @@ dotnet_style_prefer_conditional_expression_over_return = true:silent
 dotnet_style_prefer_inferred_tuple_names = true:suggestion
 dotnet_style_prefer_inferred_anonymous_type_member_names = true:suggestion
 dotnet_style_prefer_compound_assignment = true:suggestion
+dotnet_style_prefer_simplified_interpolation = true:suggestion
+dotnet_style_namespace_match_folder = true:suggestion
