--- a/src/VirtoCommerce.MarketingExperienceApi.Data/VirtoCommerce.MarketingExperienceApi.Data.csproj
+++ b/src/VirtoCommerce.MarketingExperienceApi.Data/VirtoCommerce.MarketingExperienceApi.Data.csproj
@@ -1,16 +1,16 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
   <PropertyGroup>
     <!-- Project is not a test project -->
     <SonarQubeTestProject>false</SonarQubeTestProject>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
-    <PackageReference Include="VirtoCommerce.CustomerModule.Core" Version="3.400.0" />
-    <PackageReference Include="VirtoCommerce.ExperienceApiModule.Core" Version="3.400.0" />
-    <PackageReference Include="VirtoCommerce.MarketingModule.Core" Version="3.400.0" />
-    <PackageReference Include="VirtoCommerce.Platform.Data" Version="3.400.0" />
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0" PrivateAssets="All" />
+    <PackageReference Include="VirtoCommerce.CustomerModule.Core" Version="3.800.0-alpha.805-pt-14740-net8" />
+    <PackageReference Include="VirtoCommerce.ExperienceApiModule.Core" Version="3.800.0-alpha.1309-pt-14740-net8" />
+    <PackageReference Include="VirtoCommerce.MarketingModule.Core" Version="3.800.0-alpha.821-pt-14740-net8" />
+    <PackageReference Include="VirtoCommerce.Platform.Data" Version="3.800.0-alpha.12831-net8" />
   </ItemGroup>
 </Project>
