--- a/src/VirtoCommerce.MarketingExperienceApi.Data/VirtoCommerce.MarketingExperienceApi.Data.csproj
+++ b/src/VirtoCommerce.MarketingExperienceApi.Data/VirtoCommerce.MarketingExperienceApi.Data.csproj
@@ -8,9 +8,9 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0" PrivateAssets="All" />
-    <PackageReference Include="VirtoCommerce.CustomerModule.Core" Version="3.800.0-alpha.805-pt-14740-net8" />
-    <PackageReference Include="VirtoCommerce.ExperienceApiModule.Core" Version="3.800.0-alpha.1309-pt-14740-net8" />
-    <PackageReference Include="VirtoCommerce.MarketingModule.Core" Version="3.800.0-alpha.821-pt-14740-net8" />
-    <PackageReference Include="VirtoCommerce.Platform.Data" Version="3.800.0-alpha.12831-net8" />
+    <PackageReference Include="VirtoCommerce.CustomerModule.Core" Version="3.800.0" />
+    <PackageReference Include="VirtoCommerce.ExperienceApiModule.Core" Version="3.800.0" />
+    <PackageReference Include="VirtoCommerce.MarketingModule.Core" Version="3.800.0" />
+    <PackageReference Include="VirtoCommerce.Platform.Data" Version="3.800.0" />
   </ItemGroup>
 </Project>
