--- a/src/VirtoCommerce.MarketingExperienceApi.Data/VirtoCommerce.MarketingExperienceApi.Data.csproj
+++ b/src/VirtoCommerce.MarketingExperienceApi.Data/VirtoCommerce.MarketingExperienceApi.Data.csproj
@@ -8,9 +8,9 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0" PrivateAssets="All" />
-    <PackageReference Include="VirtoCommerce.CustomerModule.Core" Version="3.800.0" />
-    <PackageReference Include="VirtoCommerce.ExperienceApiModule.Core" Version="3.800.0" />
+    <PackageReference Include="VirtoCommerce.CustomerModule.Core" Version="3.811.0" />
+    <PackageReference Include="VirtoCommerce.ExperienceApiModule.Core" Version="3.837.0-alpha.1423-vcst-1353" />
     <PackageReference Include="VirtoCommerce.MarketingModule.Core" Version="3.800.0" />
-    <PackageReference Include="VirtoCommerce.Platform.Data" Version="3.800.0" />
+    <PackageReference Include="VirtoCommerce.Platform.Data" Version="3.841.0" />
   </ItemGroup>
 </Project>
