--- a/src/VirtoCommerce.MarketingExperienceApi.Data/VirtoCommerce.MarketingExperienceApi.Data.csproj
+++ b/src/VirtoCommerce.MarketingExperienceApi.Data/VirtoCommerce.MarketingExperienceApi.Data.csproj
@@ -11,6 +11,6 @@
     <PackageReference Include="VirtoCommerce.CustomerModule.Core" Version="3.817.0" />
     <PackageReference Include="VirtoCommerce.MarketingModule.Core" Version="3.812.0" />
     <PackageReference Include="VirtoCommerce.Platform.Data" Version="3.861.0" />
-    <PackageReference Include="VirtoCommerce.Xapi.Core" Version="3.900.0" />
+    <PackageReference Include="VirtoCommerce.Xapi.Core" Version="3.904.0-alpha.74-vcst-2589-update-mediatr" />
   </ItemGroup>
 </Project>
